--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -107,3 +107,8 @@ h1:before, .anchor:before {
     background-color: #00369f;
     font-size: .8em;
 }
+
+/* Intro paragraph alignment */
+.page__content > p:first-of-type {
+  text-align: justify;
+}
